Fix testimonials missing truncate functionality

--- a/website/modules/asset/ui/src/scss/_testimonials.scss
+++ b/website/modules/asset/ui/src/scss/_testimonials.scss
@@ -70,12 +70,9 @@
         height: 240px;
       }
       .sf-person__content {
-          @include truncate-lines(7);
-          @include breakpoint-medium {
-            @include truncate-lines(8);
-            @include font-settings(14px, 150%, 400);
-            color: $gray-500;
-          }
+        @include truncate-lines(7);
+        @include font-settings(14px, 150%, 400);
+        color: $gray-500;
       }
     }
   }
